web-infras/parser/tests/fixtures/esprima/ES6/yield/invalid-yield-strict-identifier/output.txt
[SyntaxError]: 'yield' is only allowed within generator functions. (1,30)
1|"use strict"; function f() { yield }
 |                            ^
